--- a/packages/templates/knowledge-base/src/pages/articles/[slug].astro
+++ b/packages/templates/knowledge-base/src/pages/articles/[slug].astro
@@ -93,7 +93,7 @@ const relatedArticles = threads
 
     <footer>
       <p>Was this article helpful?</p>
-      <p class="powered">Powered by <a href="https://discolink.dev">DiscoLink</a></p>
+      <p class="powered">Powered by <a href="https://discolink.site">DiscoLink</a></p>
     </footer>
   </main>
 </BaseLayout>
