--- a/packages/demo/src/layouts/BaseLayout.astro
+++ b/packages/demo/src/layouts/BaseLayout.astro
@@ -53,6 +53,7 @@ const ogImageUrl = ogImage || '/og-default.png';
           <a href="/changelog">Changelog</a>
           <a href="/kb">Knowledge Base</a>
           <a href="https://github.com/KevinTrinh1227/discolink" target="_blank" rel="noopener" class="github-btn">
+            GitHub
             <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
               <path d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.75.75 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25z"/>
             </svg>
