--- a/packages/templates/blog/src/pages/posts/[slug].astro
+++ b/packages/templates/blog/src/pages/posts/[slug].astro
@@ -117,7 +117,7 @@ const relatedPosts = threads
   </article>
 
   <footer class="site-footer">
-    <p>Powered by <a href="https://discolink.dev">DiscoLink</a></p>
+    <p>Powered by <a href="https://discolink.site">DiscoLink</a></p>
   </footer>
 </BaseLayout>
 
