--- a/packages/templates/changelog/src/pages/index.astro
+++ b/packages/templates/changelog/src/pages/index.astro
@@ -52,7 +52,7 @@ const jsonLd = {
     </main>
 
     <footer>
-      <p>Powered by <a href="https://discolink.dev">DiscoLink</a></p>
+      <p>Powered by <a href="https://discolink.site">DiscoLink</a></p>
     </footer>
   </div>
 </BaseLayout>
