--- a/packages/templates/faq/src/pages/faq/[slug].astro
+++ b/packages/templates/faq/src/pages/faq/[slug].astro
@@ -88,7 +88,7 @@ function formatDate(dateStr: string): string {
     </article>
 
     <footer>
-      <p>Powered by <a href="https://discolink.dev">DiscoLink</a></p>
+      <p>Powered by <a href="https://discolink.site">DiscoLink</a></p>
     </footer>
   </div>
 </BaseLayout>
